# biominer-indexd

./: .gitignore  Cargo.toml  Makefile  README.md  README_CN.md
.github/workflows/: release.yaml
docs/: README.md  _config.yml  build_dataset_cn.md  build_dataset_en.md  copilot.html  datasets.html  features.html  github.html  index.html  script.js  styles.css
examples/: .gitignore  batch_convertor.sh  cbioportal2dataset.py  check_datafiles.py  check_datasets.py  check_datasets.sh  code_to_disease_mapping.json  code_to_organ_mapping.json  config.json  file_example.csv  file_template.tsv  make_tarball.sh  oncotree-20250601.json  test.ipynb
examples/cbioportal_datasets/: index.json
examples/cbioportal_datasets/acc_2019/: data_dictionary.json
examples/datasets/: index.json
examples/datasets/acbc_mskcc_2015/: data_dictionary.json  datafile.tsv  dataset.json
examples/datasets/acbc_mskcc_2015/v0.0.1/: dataset.json  metadata_dictionary.json
examples/datasets/acbc_mskcc_2015/v0.0.2/: LICENSE.md  README.md  dataset.json  metadata_table.parquet
examples/datasets/acbc_mskcc_2015/v0.0.3/: datafile.tsv  dataset.json  metadata_dictionary.json
examples/datasets/acc_2019/: data.parquet  data_dictionary.json  datafile.tsv  dataset.json
examples/raw_datasets/acbc_mskcc_2015/: data_cna.tsv  data_mutations.maf  data_sv.tsv  dataset.txt  metadata_table.tsv
migrations/: 20220406_init.down.sql  20220406_init.up.sql  20220812_add_acl.down.sql  20220812_add_acl.up.sql
python/: .gitignore  LICENSE.md  README.md  README_CN.md  setup.py
python/biominer_idxd_convertor/: build_dataset.py  cbioportal2dataset.py  cli.py  convertor.md  datafile.py  formatter.py  omics.py  utils.py  validation.py
python/tests/: conftest.py  test_cbioportal2dataset.py  test_cli.py  test_datafile.py  test_edge_cases.py  test_integration.py  test_omics.py  test_utils.py  test_validation.py
sql/: query_files.xml
src/: database.rs  lib.rs  main.rs  repo_config.rs  util.rs
src/api/: auth.rs  error.rs  files.rs  mod.rs  route.rs  util.rs
src/model/: data_dictionary.rs  data_engine_design.md  data_table.rs  datafile.rs  dataset.rs  dataset_metadata.rs  duckdb_util.rs  mod.rs  util.rs
src/query_builder/: mod.rs  query_plan.rs  query_plan_cn.md  query_plan_en.md  sql_builder.rs  where_builder.rs
studio/: package.json  tsconfig.json
studio/config/: biominer-api.json  config.embed.ts  config.ts  defaultSettings.ts  proxy.ts  routes.ts
studio/public/: CNAME
studio/public/assets/: data_downloader.md
studio/src/: app.tsx  global.less  manifest.json  typings.d.ts
studio/src/components/Footer/: index.less  index.tsx
studio/src/components/HeaderDropdown/: index.less
studio/src/components/NoticeIcon/: NoticeIcon.tsx  NoticeList.less  index.tsx
studio/src/components/RightContent/: AvatarDropdown.tsx  index.less  index.tsx
studio/src/locales/: en-US.ts  zh-CN.ts
studio/src/locales/en-US/: dataRepo.ts  menu.ts  pages.ts
studio/src/locales/zh-CN/: dataRepo.ts  menu.ts  pages.ts
studio/src/pages/: 404.tsx  Index.tsx  Welcome.tsx  document.ejs  index.less
studio/src/pages/About/: index.less  index.tsx
studio/src/pages/Chatbot/: ChatboxExample.tsx  Copilot.tsx  index.less  index.tsx
studio/src/pages/DataRepo/: index.less  index.tsx
studio/src/pages/DataTable/: ButtonCell.ts  ChartCard.less  ChartCard.tsx  ColumnSelector.tsx  DataDownloader.tsx  DataInfo.tsx  Filter.tsx  GroupedChartCard.less  GroupedChartCard.md  GroupedChartCard.tsx  GroupedChartCardExample.tsx  GroupedVisualPanel.less  GroupedVisualPanel.tsx  QueryBuilder.tsx  VirtualTable.less  VirtualTable.tsx  VirtualTableFaster.less  VirtualTableFaster.tsx  VisualPanel.less  VisualPanel.tsx  VisualPanelOld.less  VisualPanelOld.tsx  index.less  index.tsx  utils.ts
tmp/: test_load.tsv
tools/: batch_import.py
(+42 files in other folders)
