[package]
authors = ["Jingcheng Yang <yjcyxky@163.com>"]
# build = "build/build.rs"
documentation = ""
edition = "2021"
homepage = "https://github.com/yjcyxky/biominer-indexd"
keywords = ["biominer", "indexd"]
name = "biominer-indexd"
readme = "README.md"
repository = "https://github.com/yjcyxky/biominer-indexd"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "^0"
dotenv = "0.15.0"
fast_log = "1.5.0"
lazy_static = "1.3"
log = "0.4"
rbatis = {version = "3.0.32", default-features = false, features = ["mysql", "sqlite", "postgres", "runtime-tokio-rustls", "debug_mode", "upper_case_sql_keyword"]}
rbson = "2.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
tokio = {version = "1.17.0", features = ["rt-multi-thread", "macros"]}
uuid = {version = "^0", features = ["serde", "v4"]}
