[package]
authors = ["Jingcheng Yang <yjcyxky@163.com>"]
# build = "build/build.rs"
documentation = "https://github.com/yjcyxky/biominer-indexd/blob/master/README.md"
edition = "2021"
homepage = "https://github.com/yjcyxky/biominer-indexd"
keywords = ["biominer", "indexd"]
name = "biominer-indexd"
readme = "README.md"
repository = "https://github.com/yjcyxky/biominer-indexd"
version = "0.1.0"

[[bin]]
name = "biominer-indexd"
path = "src/bin/biominer-indexd.rs"

[[bin]]
name = "biominer-indexd-cli"
path = "src/bin/biominer-indexd-cli.rs"

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"

[dependencies]
anyhow = "1.0"
chrono = "^0"
dotenv = "0.15.0"
lazy_static = "1.3"
log = "0.4"
log4rs = "1.0.0"
poem = { version="1.3.27", features = ["embed"] }
poem-openapi = {version = "1.3.27", features = ["swagger-ui", "chrono", "uuid"]}
regex = "1"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
structopt = {version = "0.3", default-features = false}
tokio = {version = "1.17.0", features = ["rt-multi-thread", "macros", "signal"]}
uuid = {version = "^0", features = ["serde", "v4"]}
rust-embed = "6.3.0"
custom_error = "1.9.2"
sqlx = { version = "0.6.3", features = [
    "postgres",
    "macros",
    "runtime-tokio-rustls",
    "migrate",
    "chrono",
    "json"
] }
reqwest = { version = "0.12.3", features = ["json", "stream"] }
base64 = "0.22.0"
jsonwebtoken = { version = "9.2.0" }
csv = "1.1.6"
validator = { version = "0.16.1", features = ["derive"] }
url = "2.4.0"
include_dir = "0.7.3"
tempfile = "3.2.0"
duckdb = { version = "1.2.2", features = ["bundled", "serde_json"] }
hex = "0.4.3"
openssl = { version = "0.10.36", features = ["vendored"] }
